--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
