Improved search bar design

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <div class="row">
                     <div class="col-9">
                         <input type="search" placeholder="Enter city" autocomplete="off" autofocus="on" id="input-city"
-                            class="form-control shadow-sm" />
+                            class="search-box" />
                     </div>
                     <div class="col-3">
-                        <button class="heading">
+                        <button class="search-button">
                             SEARCH
                         </button>
                     </div>
@@ -36,7 +36,7 @@
     <div class="row">
         <div class="col">
             <strong> Yesterday </strong> <br />
-            🌞 14°C/ <strong> 19°C </strong>
+            🌞 14°C
         </div>
         <div class="col">
             <strong> Today </strong> <br />
@@ -45,12 +45,11 @@
         </div>
         <div class="col">
             <strong> Tomorrow </strong> <br />
-            🌥️ 11°C/ <strong> 22°C </strong>
+            🌥️ 11°C
         </div>
         <div class="col">
             → <br />
             More</div>
-    </div>
     </div>
 
     <script src="java.js"></script>
