--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="containerBox">
         <div class="weathersearch">
             <form class="search-form" id="search-form">
                 <div class="row">
@@ -25,33 +25,34 @@
                 </div>
             </form>
         </div>
-    </div>
 
-    <br />
-    <br />
-    <h1 id="city">Sydney</h1>
-    <h2>Tuesday</h2>
-    <h3>16:00</h3>
-    <br />
-    <div class="row">
-        <div class="col">
-            <strong> Yesterday </strong> <br />
-            🌞 14°C
-        </div>
-        <div class="col">
-            <strong> Today </strong> <br />
-            🌞<span class="temperature" id="temperature"> 8 </span> <span class="units"> <a href="# " id="celsius"> °C
-                </a> / <a href="# " id="farenheit"> ℉ </a> </span>
-        </div>
-        <div class="col">
-            <strong> Tomorrow </strong> <br />
-            🌥️ 11°C
-        </div>
-        <div class="col">
-            → <br />
-            More</div>
-    </div>
 
+        <br />
+        <br />
+        <h1 id="city">Sydney</h1>
+        <h2>Tuesday</h2>
+        <h3>16:00</h3>
+        <br />
+        <div class="row">
+            <div class="col">
+                <strong> Yesterday </strong> <br />
+                🌞 14°C
+            </div>
+            <div class="col">
+                <strong> Today </strong> <br />
+                🌞<span class="temperature" id="temperature"> 8 </span> <span class="units"> <a href="# " id="celsius">
+                        °C
+                    </a> / <a href="# " id="farenheit"> ℉ </a> </span>
+            </div>
+            <div class="col">
+                <strong> Tomorrow </strong> <br />
+                🌥️ 11°C
+            </div>
+            <div class="col">
+                → <br />
+                More</div>
+        </div>
+    </div>
     <script src="java.js"></script>
 </body>
 
