--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 → <br />
                 More</div>
         </div>
+        <footer>
+            <p>
+                This project was coded by
+                <a href="https://github.com/Yehsha-Github" target="_blank">Yehsha</a> and is
+                <a href="https://github.com/Yehsha-Github/Ops-challange.git" target="_blank"> on GitHub</a> and
+                <a href="https://endearing-monstera-12366a.netlify.app" target="_blank">hosted on Netlify</a>
+            </p>
+        </footer>
     </div>
     <script src="java.js"></script>
 </body>
