--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/Yehsha-Github" target="_blank">Yehsha</a> and is
-                <a href="https://github.com/Yehsha-Github/Ops-challange.git" target="_blank"> on GitHub</a> and
-                <a href="https://endearing-monstera-12366a.netlify.app" target="_blank">hosted on Netlify</a>
+                <a href="https://github.com/Yehsha-Github/Pilot-repository.git" target="_blank"> on GitHub</a> and
+                <a href="https://magenta-peony-38329f.netlify.app" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
     </div>
