updated content and display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="containerBox">
-        <div class="weathersearch">
+        <header>
             <form class="search-form" id="search-form">
                 <div class="row">
                     <div class="col-9">
@@ -24,12 +24,12 @@
                     </div>
                 </div>
             </form>
-        </div>
-
+        </header>
 
         <br />
         <br />
         <h1 id="city">Sydney</h1>
+        <br />
         <h2>Tuesday</h2>
         <h3>16:00</h3>
         <br />
