removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -42,19 +42,22 @@
         <br />
         <div class="row">
             <div class="col">
-                <strong> Yesterday </strong> <br />
-                🌥️ 11°C
-            </div>
-            <div class="col">
                 <strong> Today </strong> <br />
-                <span class="current-temperature-icon" id="icon">☀️</span>
+                <span id="icon">☀️</span>
                 <span class="temperature" id="temperature"> 29 </span> <span class="units"> <a href="# " id="celsius">
                         °C
                     </a> / <a href="# " id="farenheit"> ℉ </a> </span>
             </div>
-            <div class="col">
-                <strong> Tomorrow </strong> <br />
-                🌥️ 11°C
+            <div class="weather-forecast">
+                <div class="col">
+                    <strong><span class="forecast-tomorrow">Tomorrow</span></strong> <br />
+                    <img src="https://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/sun-behind-cloud.png"
+                        alt="sun behind cloud" height="50px" />
+                    <div class="weather-forecast-temp">
+                        <span class="tomorrow-temp-min">8°C</span>
+                        <span class="tomorrow-temp-max">11°C</span>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
